--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ cifar-10-batches-py/readme.html
 cifar-10-batches-py/test_batch
 cifar-10-python.tar
 cifar-10-python.tar.gz
+cifar-100-python.tar
+cifar-100-python.tar.gz
+cifar-100-python/file.txt~
+cifar-100-python/meta
+cifar-100-python/test
+cifar-100-python/train
